syntax = "proto3";

package pnr;

service PnrService {
  rpc CreatePnr(CreatePnrRequest) returns (PnrResponse);
}

message PnrZone {
  string name = 1;
  repeated PnrRecord records = 2;
  optional string resolver_address = 3;
  optional string personal_address = 4;
}

message PnrRecord {
  optional string sub_name = 1;
  string address = 2;
  PnrRecordType record_type = 3;
  uint64 ttl = 4;
}

enum PnrRecordType {
  A = 0;
  X = 1;
}

message CreatePnrRequest {
  PnrZone pnr_zone = 1;
  optional string cache_only = 2;
}

message PnrResponse {
  PnrZone pnr_zone = 1;
}
